Update Regression Exercise 1.ipynb

--- a/Regression Exercise 1.ipynb
+++ b/Regression Exercise 1.ipynb
@@ -5,7 +5,7 @@
    "id": "5d4a1970",
    "metadata": {},
    "source": [
-    "For the first part of the task, I performed a linear regression of the evolution of the maximum battery capacity of my laptop. In addition, I wanted to determine the formula of the linear regression to be able to predict the future development as well."
+    "For the first part of the task, I performed a linear regression on the time history of the maximum battery capacity of my laptop. In addition, I wanted to determine the formula of the linear regression to be able to predict the future development as well."
    ]
   },
   {
